--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,10 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/hOpenMenuB"
+        android:id="@+id/hCurvedBottomBarB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Open Popup menu"
+        android:text="Curved bottom bar example"
         android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
