--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,19 @@
         android:text="Kotlin Flow"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hCurvedBottomBarB" />
+        app:layout_constraintTop_toBottomOf="@id/hCurvedBottomBarB"
+         />
+
+
+    <Button
+        android:id="@+id/hCropIB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:text="Crop Image"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hKotlinFlowsB" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
